# template-ai-monorepo

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  justfile  pyproject.toml
.claude/commands/: end-session.md
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
configs/: mcp-config.template.json
docs/: ARCHITECTURE.md  folders-and-naming.md
docs/adr/: 0001-uv-workspace.md  0002-mcp-client-server-libraries.md  0003-supply-chain-pinning-scope.md  0004-copier-base-overlay-partition.md
docs/planning/: DEBT.md  DONE.md  PLAN.md  README.md  TRACKER.md  spike-copier-partition.md
docs/registers/: deferred-hardening.md
services/example-mcp-server/: Dockerfile  README.md  pyproject.toml
services/example-mcp-server/src/example_mcp_server/: __init__.py  server.py
tests/: test_structure.py
tests/fixtures/: .gitkeep
tests/integration/: test_mcp_roundtrip.py
tests/unit/: test_eval_audit.py  test_tools.py
